feat: Change default language to English
- Update default language from Chinese to English across all pages
- Modified files:
  - Energy-cabinet-main/common.js
  - Energy-cabinet-main/index.html
  - Energy-cabinet-main/touchscreen/common-header-scripts.js
  - Energy-cabinet-main/touchscreen/login.html
- Remove browser language auto-detection logic
- Users can still manually switch language via UI
- Language preference persists in localStorage

--- a/Energy-cabinet-main/index.html
+++ b/Energy-cabinet-main/index.html
@@ -480,8 +480,8 @@
     <div class="particles" id="particles"></div>
 
     <script>
-        // 语言切换相关变量和翻译文本
-        let currentLang = localStorage.getItem('language') || 'zh';
+        // 语言切换相关变量和翻译文本 - 默认英文
+        let currentLang = localStorage.getItem('language') || 'en';
 
         const translations = {
             zh: {
