--- a/Energy-cabinet-main/touchscreen/login.html
+++ b/Energy-cabinet-main/touchscreen/login.html
@@ -499,7 +499,7 @@
             }
         };
 
-        let currentLang = 'zh';
+        let currentLang = 'en'; // 默认英文
 
         // 显示/隐藏语言下拉菜单
         function toggleLanguageDropdown() {
